removed ugly colours

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -58,7 +58,7 @@
         if(msg.id == socket.id){
           var color = msg.color;
           //$("#msg").html(msg.color);
-          document.body.style.backgroundColor = msg.color;
+          //document.body.style.backgroundColor = msg.color;
         }
       });
       
